bootstrap/templates/ossm/destinationrule.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1beta1
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "3"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
  name: winmesh
  namespace: windowsmesh
  labels:
    kiali_wizard: request_routing
spec:
  host: winmesh.windowsmesh.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
