bootstrap/templates/ossm/virtualservice.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1beta1
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "3"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
  name: winmesh
  namespace: windowsmesh
  labels:
    kiali_wizard: request_routing
spec:
  hosts:
    - '*'
  gateways:
    - windowsmesh/winmesh-gateway
  http:
    - route:
        - destination:
            host: winmesh.windowsmesh.svc.cluster.local
            subset: v1
          weight: 50
        - destination:
            host: winmesh.windowsmesh.svc.cluster.local
            subset: v2
          weight: 50
