bootstrap/templates/ossm/virtualservice_database.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1beta1
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "3"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
  name: database
  namespace: windowsmesh
  labels:
    kiali_wizard: request_routing
spec:
  hosts:
    - database.windowsmesh.svc.cluster.local
  http:
    - route:
        - destination:
            host: database.windowsmesh.svc.cluster.local
          weight: 100
